force-app/main/default/objects/Shop__c/fields/Account1__c.field-meta.xml
<CustomField>
    <fullName>Account1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shop is look up to Account</description>
    <label>Account1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shops</relationshipLabel>
    <relationshipName>Shops</relationshipName>
    <type>Lookup</type>
</CustomField>