force-app/main/default/objects/Shop__c/fields/Expenses__c.field-meta.xml
<CustomField>
    <fullName>Expenses__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense</label>
    <referenceTo>Expense__c</referenceTo>
    <relationshipLabel>Shops</relationshipLabel>
    <relationshipName>Shops</relationshipName>
    <type>Lookup</type>
</CustomField>