force-app/main/default/objects/Shop__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Sample_Custom F_Product</description>
    <label>Product</label>
    <length>25</length>
    <type>Text</type>
</CustomField>