force-app/main/default/objects/Shop__c/fields/Shop_Email__c.field-meta.xml
<CustomField>
    <fullName>Shop_Email__c</fullName>
    <label>Shop Email</label>
    <type>Email</type>
</CustomField>