force-app/main/default/objects/Shop__c/fields/ShopID__c.field-meta.xml
<CustomField>
    <fullName>ShopID__c</fullName>
    <description>Custom field_Picklist</description>
    <label>ShopID</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shop A</fullName>
            </value>
            <value>
                <fullName>Shop B</fullName>
            </value>
            <value>
                <fullName>Shop C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>