force-app/main/default/objects/Shop__c/validationRules/Shop_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>Shop_ID</fullName>
    <active>false</active>
    <description>validation rule2</description>
    <errorConditionFormula>IF(AND( ISPICKVAL( ShopID__c , &#39;Shop A&#39;), Discount__c  &gt; 0.05), true,False)</errorConditionFormula>
    <errorMessage>Shop A Discount should not be greater than 5%</errorMessage>
</ValidationRule>