force-app/main/default/objects/Shop__c/validationRules/Shop_ID2.validationRule-meta.xml
<ValidationRule>
    <fullName>Shop_ID2</fullName>
    <active>false</active>
    <description>validation rule2</description>
    <errorConditionFormula>IF(AND( ISPICKVAL( ShopID__c , &#39;Shop C&#39;), Discount__c  &gt; 0.15), true,False)</errorConditionFormula>
    <errorMessage>Shop C Discount should not be greater than 15%</errorMessage>
</ValidationRule>